# assistant

./: .gitignore  Makefile  PRECISE.md  README.md  asound.conf  polyxia.pb  pyproject.toml
assistant/: .env.template  app.py  key  nlu.py  t.py
assistant/chatbot/: chatgpt.py
assistant/utils/: colors.py  playsound.py  pyaudio_logs.py
