[tool.poetry]
name = "assistant"
version = "0.1.0"
description = ""
authors = ["croumegous <cyril.roumegous@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
numpy = "1.22.4"
requests = "^2.28.2"
gtts = "^2.3.1"
speechrecognition = "^3.10.0"
langdetect = "^1.0.9"
python-dotenv = "^1.0.0"
setuptools = "^67.6.0"
openai = "^0.27.2"
ftfy = "^6.1.1"
soundfile = "^0.12.1"
torch = { version = "=1.13.1", source = "torch" }
pyaudio = "^0.2.13"
transformers = "^4.27.1"
pygobject = "^3.44.1"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cpu"
secondary = true
default = false


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.1.1"
isort = "^5.12.0"
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
